--- a/Server/WebContent/WebChat.html
+++ b/Server/WebContent/WebChat.html
@@ -11,7 +11,10 @@
 	<tr>
 		<td>
 		<div class="chatBox">
-			<h1>Chat</h1>
+			<div class="header">
+				<h1 class="headerChatName" id = "headerName">Chat</h1>
+				<button class="deleteChatBlockButton" id="buttonLeave">Leave</button>
+			</div>
 			<div class="status" id="block" ></div>
 			<form action="#" name="chat" class="ChatForm">
 				<input type="text" name= "message" class="ChatTextField">
